# sac_goal_follower_ws

./: .gitignore  README.md  frames_2025-10-18_18.05.03.gv
src/detectors/: package.xml  setup.py
src/detectors/config/: left.yaml  right.yaml
src/detectors/detectors/: camerainfo_from_yaml.py  goal_marker_depth_node.py
src/detectors/msg/: GoalMarkerState.msg
src/detectors_msgs/: CMakeLists.txt  package.xml
src/detectors_msgs/msg/: GoalMarkerState.msg
src/four_wheel_robot/: CMakeLists.txt  package.xml
src/four_wheel_robot/description/: depth_camera.xacro  depth_camera_old.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  stereo_camera.xacro
src/four_wheel_robot/launch/: launch_sim.launch.py  rsp.launch.py  spawn_goal.launch.py  spawn_moving_goal.launch.py
src/four_wheel_robot/models/goal_marker/: model.config  model.sdf
src/four_wheel_robot/models/mobile_goal/: model.config  model.sdf
src/four_wheel_robot/worlds/: empty_with_state.world
src/goal_marker_description/: CMakeLists.txt  package.xml
src/goal_marker_description/launch/: spawn_goal_marker.launch.py  view_goal_marker.launch.py
src/goal_marker_description/models/goal_marker/: model.config  model.sdf  model.urdf
src/goal_marker_description/models/goal_marker/materials/scripts/: chassis_pattern.material
src/goal_marker_description/models/goal_marker/urdf/: goal_marker.urdf.xacro
src/goal_marker_description/urdf/: goal_marker.urdf.xacro
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  launch_sim.launch.py  rsp.launch.py
src/my_robot_description/models/my_robot_description/: depth_camera.xacro  gazebo_control.xacro  model.config  my_robot.urdf.xacro  my_robot_core.xacro  my_robot_core_old.xacro
src/my_robot_description/models/my_robot_description/meshes/: BL_link.STL  BR_link.STL  FL_link.STL  FR_link.STL
src/sac_goal_follower/: package.xml  setup.cfg  setup.py
src/sac_goal_follower/launch/: train_only.launch.py
src/sac_goal_follower/sac_goal_follower/: goal_env.py  test_disparity.py  test_sac.py  train_sac.py
src/sac_goal_follower/sac_goal_follower/logs/: events.out.tfevents.1759943756.mohammadabedi-X411UNV.273563.0  events.out.tfevents.1759999278.mohammadabedi-X411UNV.14966.0  events.out.tfevents.1759999499.mohammadabedi-X411UNV.17618.0  events.out.tfevents.1760000100.mohammadabedi-X411UNV.25103.0  events.out.tfevents.1760007626.mohammadabedi-X411UNV.111969.0  events.out.tfevents.1760011164.mohammadabedi-X411UNV.153283.0  events.out.tfevents.1760011843.mohammadabedi-X411UNV.161228.0  events.out.tfevents.1760013376.mohammadabedi-X411UNV.178266.0  events.out.tfevents.1760014455.mohammadabedi-X411UNV.190930.0  (+10 more)
src/scooter_nav/: package.xml  setup.cfg  setup.py
src/scooter_nav/launch/: go_to_zone_and_search.launch.py
src/scooter_nav/scooter_nav/: go_to_zone_and_search.py  min_avoid.py  move_entity.py  moving_goal.py  moving_goal_twist.py
src/test_codes/: package.xml  setup.cfg  setup.py
src/test_codes/launch/: marker_detector.launch.py  stereo_marker_depth.launch.py
src/test_codes/test_codes/: marker_detector.py  stereo_marker_depth.py
(+22 files in other folders)
