<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detectors</name>
  <version>0.0.0</version>
  <description>Detectos for Follower Robot</description>
  <maintainer email="mohammadabedi1179@gmail.com">mohammadabedi</maintainer>
  <license>Apache-2.0</license>

  <!-- Pure Python package build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Runtime deps -->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>stereo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>detectors_msgs</depend>


  <!-- Tests (unchanged) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
